--- a/05_Image/Bedrock Stable Diffusion XL.ipynb
+++ b/05_Image/Bedrock Stable Diffusion XL.ipynb
@@ -90,6 +90,7 @@
     "import json\n",
     "import os\n",
     "import sys\n",
+    "import sagemaker\n",
     "\n",
     "# External Dependencies:\n",
     "import boto3\n",
@@ -99,16 +100,11 @@
     "sys.path.append(os.path.abspath(module_path))\n",
     "from utils import bedrock, print_ww\n",
     "\n",
-    "\n",
-    "# ---- ⚠️ Un-comment and edit the below lines as needed for your AWS setup ⚠️ ----\n",
-    "\n",
-    "# os.environ[\"AWS_DEFAULT_REGION\"] = \"<REGION_NAME>\"  # E.g. \"us-east-1\"\n",
-    "# os.environ[\"AWS_PROFILE\"] = \"<YOUR_PROFILE>\"\n",
-    "# os.environ[\"BEDROCK_ASSUME_ROLE\"] = \"<YOUR_ROLE_ARN>\"  # E.g. \"arn:aws:...\"\n",
+    "sagemaker_role = sagemaker.get_execution_role()\n",
     "\n",
     "boto3_bedrock = bedrock.get_bedrock_client(\n",
-    "    assumed_role=os.environ.get(\"BEDROCK_ASSUME_ROLE\", None),\n",
-    "    region=os.environ.get(\"AWS_DEFAULT_REGION\", None),\n",
+    "    assumed_role=sagemaker_role,\n",
+    "    region=\"us-east-1\",\n",
     ")"
    ]
   },
