--- a/06_CodeGeneration/03_code_translate_w_langchain.ipynb
+++ b/06_CodeGeneration/03_code_translate_w_langchain.ipynb
@@ -92,22 +92,18 @@
     "import sys\n",
     "\n",
     "import boto3\n",
+    "import sagemaker\n",
     "\n",
     "module_path = \"..\"\n",
     "sys.path.append(os.path.abspath(module_path))\n",
     "from utils import bedrock, print_ww\n",
     "\n",
     "\n",
-    "# ---- ⚠️ Un-comment and edit the below lines as needed for your AWS setup ⚠️ ----\n",
-    "\n",
-    "# os.environ[\"AWS_DEFAULT_REGION\"] = \"<REGION_NAME>\"  # E.g. \"us-east-1\"\n",
-    "# os.environ[\"AWS_PROFILE\"] = \"<YOUR_PROFILE>\"\n",
-    "# os.environ[\"BEDROCK_ASSUME_ROLE\"] = \"<YOUR_ROLE_ARN>\"  # E.g. \"arn:aws:...\"\n",
-    "\n",
+    "sagemaker_role = sagemaker.get_execution_role()\n",
     "\n",
     "boto3_bedrock = bedrock.get_bedrock_client(\n",
-    "    assumed_role=os.environ.get(\"BEDROCK_ASSUME_ROLE\", None),\n",
-    "    region=os.environ.get(\"AWS_DEFAULT_REGION\", None),\n",
+    "    assumed_role=sagemaker_role,\n",
+    "    region=\"us-east-1\",\n",
     ")"
    ]
   },
